Ticket #28386: Fixed display of input fields.
Removed over-styling. Removed excessive flex-box styling. Ensured
reasonable text wrapping. Ensure that buttons are overflowed last.

--- a/com.top_logic.themes.core/src/main/webapp/style/tables.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/tables.css
@@ -610,21 +610,8 @@ select.tbl {	/* Tables can be written as selects, using this style */
  	width: 80%;
 }
 
-.fltButtons {
-	height: var(--TABLE_FILTER_BUTTON_BAR_HEIGHT);
-	display: flex;
-	justify-content: space-around;
-    align-items: center;
-}
-
-td.fltButton {
-	width:17px;
-	text-align: center;
-	position: relative;
-}
-
-.fltButtons .cButton {
-	padding: 0 var(--spacing-01);
+.fltButton {
+	padding-left: var(--spacing-01);
 }
 
 .tl-table__header-cell-content .fltButton.tl-table__filter-sort-icons {
@@ -923,6 +910,7 @@ table td span.cTimeInput,
 table td span.cTextPopup,
 table td span.cExpandableTextInput,
 table td span.cTextInput,
+table td span.cIconChooser,
 table td .cDataItem,
 table td span.downloadControl {
 	display: flex;
@@ -963,7 +951,6 @@ table td span.cTextPopup span.content {
 
 table td .cDataItem span.lFlexible span.content,
 table td span.downloadControl span.content {
-	width: 100%;
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
@@ -1027,25 +1014,18 @@ table td a.cDownload {
 	text-overflow: ellipsis;
 }
 
-table.tl-table td span.lFlexible,
-table.tl-table td span.lFlexibleCustom {
-	display: inline-flex;
+/* :is(table.tl-table.tl-table--fixed,.rf_cell) */
+:is(.lFlexible,.lFlexibleCustom,.ddwttContainer),
+:is(.lFlexible,.lFlexibleCustom) :is(textarea,input:is(.is-input,.is-popup)) {
+	box-sizing: border-box;
+	width: 100%;
 	overflow: hidden;
-	width: 100%;
-}
-
-table td span.lFlexible > select {
-	width: 100%;
 }
 
 /* Use default width for select fields in title of
  frozen tables (e.g. needed for gallery edit dialog). */
 .tl-table__title span.lFlexible select {
 	width: auto;
-}
-
-table td .cDatetime .lFlexible {
-	width: fit-content !important;
 }
 
 /* 
@@ -1066,10 +1046,6 @@ table td .ddwttDropBtn {
 
 table.tl-table td .cDateTime .lFixedRight .cDateInput .lFlexible {
 	width: fit-content !important;
-}
-
-table td span.lFlexible > input:not([type="image"]) {
-	width: 100%;
 }
 
 /* Use default width for input fields in title of
@@ -1304,17 +1280,21 @@ div.dirtyHandlingDialog .changes {
   	overflow: auto;
 }
 
-.tl-table__cell-container {
-	padding: 0 var(--spacing-01) !important;
-    display: inline-flex;
-    align-items: center;
-    box-sizing: border-box;
-    vertical-align: middle;
+table {
+	--table-row-height: 15px;
 }
 
-.tl-table__cell-container:has(input) {
-    width: 100%;
-	padding: 0 !important;
+.tl-table__cell {
+    height:var(--table-row-height);
+}
+
+.tl-table__cell-container {
+	overflow:hidden;
+	white-space:nowrap;
+	padding: 0 var(--spacing-01) !important;
+    box-sizing: border-box;
+    height:var(--table-row-height);
+    line-height:var(--table-row-height);
 }
 
 .tl-table__cell-container img {
@@ -1327,24 +1307,12 @@ div.dirtyHandlingDialog .changes {
 	padding-right: var(--spacing-01);
 }
 
-/* Needs to be changed when tl-table__cell-container padding changes. Otherwise the table row jumps when selection changed. */
-.tl-table__cell-container:has(input) .lFixedLeft {
-	padding-left: var(--spacing-01);
-	padding-right: 0;
-}
-
 th .tl-table__cell-container {
 	width: 100%;
 }
 
 th:last-child .tl-table__cell-container {
 	padding-right: 16px !important;
-}
-
-.tl-table__cell-container .tl-radio-checkbox-container {
-	display: flex;
-	justify-content: center;
-	flex-grow: 1;
 }
 
 .tl-table__cell-container .cPopupSelect.cannot-edit {
@@ -1388,7 +1356,6 @@ th:last-child .tl-table__cell-container {
 	border-right: 1px solid var(--border-subtle);	
 }
 
-.tl-table,
 .tl-table--fixed {
 	table-layout: fixed;
 }
@@ -1632,11 +1599,6 @@ td.treeTableTdFirst {
     background-color:var(--layer);
     border: var(--TABLE_COLUMN_BORDER_WIDTH) solid var(--border-subtle);
     overflow: hidden;
-}
-
-td.treeTableTdFirst span {
-    white-space:  nowrap;
-    vertical-align: middle;
 }
 
 tr.treeSelected td.treeTableTdFirst {
